--- a/notebooks/10_krr_results.ipynb
+++ b/notebooks/10_krr_results.ipynb
@@ -38,7 +38,7 @@
     "import sys\n",
     "from pathlib import Path\n",
     "\n",
-    "# Make project root importable (assumes notebook is in ./notebooks)\n",
+    "# Make project root importable\n",
     "PROJECT_ROOT = Path.cwd().resolve().parents[0]\n",
     "if (PROJECT_ROOT / \"src\").exists():\n",
     "    sys.path.insert(0, str(PROJECT_ROOT))\n",
