--- a/notebooks/20_local_regression_results.ipynb
+++ b/notebooks/20_local_regression_results.ipynb
@@ -53,7 +53,7 @@
     "from src.evaluation.splits import (train_test_split_indices, kfold_indices)\n",
     "from src.evaluation.metrics import (rmse, mae)\n",
     "\n",
-    "# Make project root importable (assumes notebook is in ./notebooks)\n",
+    "# Make project root importable\n",
     "PROJECT_ROOT = Path.cwd().resolve().parents[0]\n",
     "if (PROJECT_ROOT / \"src\").exists():\n",
     "    sys.path.insert(0, str(PROJECT_ROOT))\n",
