added analysis of results in section 2  in the notebook 20_kernel_diagnostics

--- a/notebooks/30_kernel_diagnostics.ipynb
+++ b/notebooks/30_kernel_diagnostics.ipynb
@@ -223,8 +223,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-01-26T11:47:30.579176Z",
-     "start_time": "2026-01-26T11:47:29.786538Z"
+     "end_time": "2026-01-26T17:49:55.310283Z",
+     "start_time": "2026-01-26T17:49:54.511222Z"
     }
    },
    "cell_type": "code",
@@ -260,7 +260,7 @@
     "    effective_rank = np.sum(eigvals > 1e-6)\n",
     "    print(f\"Effective rank (λ > 1e-6): {effective_rank}\")"
    ],
-   "id": "ee2e341a098405a9",
+   "id": "df22958a1f04d8da",
    "outputs": [
     {
      "name": "stdout",
@@ -327,7 +327,25 @@
      ]
     }
    ],
-   "execution_count": 19
+   "execution_count": 20
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "In this context, dimensions correspond to the eigen-directions of the Gram matrix, and each eigenvalue on the x-axis represents how much variance or information the kernel captures along that direction.\n",
+    "\n",
+    "For the scaled linear kernel, the eigenvalues decrease slowly (visible as a long, shallow curve that stays above 1e-6 across many indices), resulting in a high effective rank of 81. This indicates that the kernel relies on many weak, noisy directions, which aligns with weaker performance (test RMSE/MAE ≈ 15.31 / 11.11).\n",
+    "\n",
+    "After applying PCA, the spectrum drops sharply (most eigenvalues fall below 1e-6 within the first ~20 indices), reducing the effective rank to 17. This means the kernel operates in far fewer effective dimensions and yields improved performance (test RMSE/MAE ≈ 13.99 / 8.95)."
+   ],
+   "id": "51b0249d3c89dab6"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Both linear-kernel Gram matrices look almost identical before and after PCA, showing a dense and uniform structure with no clear diagonal dominance or block patterns. I think this is expected because PCA is an orthogonal linear transformation, and the linear kernel depends only on dot products, which dot products are fully preserved under such transformations. As a result, PCA does not meaningfully change pairwise similarities for the linear kernel, explaining why the Gram matrix values and overall structure remain nearly unchanged.",
+   "id": "7823f64d8e79f5bd"
   },
   {
    "metadata": {},
