Added remaining parts of notebook30

--- a/notebooks/30_kernel_diagnostics.ipynb
+++ b/notebooks/30_kernel_diagnostics.ipynb
@@ -839,7 +839,7 @@
     }
    ],
    "source": [
-    "results.to_csv(TABLES_DIR / \"kernel_diagnostics.csv\", index=False)\n",
+    "results.to_csv(TABLES_DIR / \"kernel_diagnostics.csv\", index=True)\n",
     "results"
    ]
   }
