Changed formatting of plots

--- a/notebooks/10_krr_results.ipynb
+++ b/notebooks/10_krr_results.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,215 +135,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>model</th>\n",
-       "      <th>kernel</th>\n",
-       "      <th>representation</th>\n",
-       "      <th>best_gamma</th>\n",
-       "      <th>best_lambda</th>\n",
-       "      <th>best_degree</th>\n",
-       "      <th>best_coef0</th>\n",
-       "      <th>test_rmse</th>\n",
-       "      <th>test_mae</th>\n",
-       "      <th>cv_rmse_mean_at_best</th>\n",
-       "      <th>cv_rmse_std_at_best</th>\n",
-       "      <th>cv_mae_mean_at_best</th>\n",
-       "      <th>cv_mae_std_at_best</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>kernel_ridge_regression</td>\n",
-       "      <td>linear</td>\n",
-       "      <td>scaled</td>\n",
-       "      <td>N/A</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>N/A</td>\n",
-       "      <td>N/A</td>\n",
-       "      <td>39.215463</td>\n",
-       "      <td>35.824732</td>\n",
-       "      <td>38.919971</td>\n",
-       "      <td>0.554179</td>\n",
-       "      <td>35.105316</td>\n",
-       "      <td>0.441751</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>kernel_ridge_regression</td>\n",
-       "      <td>rbf</td>\n",
-       "      <td>scaled</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>N/A</td>\n",
-       "      <td>N/A</td>\n",
-       "      <td>13.770211</td>\n",
-       "      <td>7.619745</td>\n",
-       "      <td>15.517286</td>\n",
-       "      <td>0.628177</td>\n",
-       "      <td>8.518545</td>\n",
-       "      <td>0.318685</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>kernel_ridge_regression</td>\n",
-       "      <td>laplacian</td>\n",
-       "      <td>scaled</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>N/A</td>\n",
-       "      <td>N/A</td>\n",
-       "      <td>13.053007</td>\n",
-       "      <td>7.055842</td>\n",
-       "      <td>13.566520</td>\n",
-       "      <td>0.827744</td>\n",
-       "      <td>7.587519</td>\n",
-       "      <td>0.346913</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>kernel_ridge_regression</td>\n",
-       "      <td>polynomial</td>\n",
-       "      <td>scaled</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>0.10</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>14.530295</td>\n",
-       "      <td>9.536881</td>\n",
-       "      <td>14.959008</td>\n",
-       "      <td>0.585510</td>\n",
-       "      <td>10.055216</td>\n",
-       "      <td>0.293854</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>kernel_ridge_regression</td>\n",
-       "      <td>linear</td>\n",
-       "      <td>pca</td>\n",
-       "      <td>N/A</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>N/A</td>\n",
-       "      <td>N/A</td>\n",
-       "      <td>41.134212</td>\n",
-       "      <td>35.938778</td>\n",
-       "      <td>40.505645</td>\n",
-       "      <td>0.485101</td>\n",
-       "      <td>34.943503</td>\n",
-       "      <td>0.165469</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>kernel_ridge_regression</td>\n",
-       "      <td>rbf</td>\n",
-       "      <td>pca</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>N/A</td>\n",
-       "      <td>N/A</td>\n",
-       "      <td>14.298824</td>\n",
-       "      <td>7.981944</td>\n",
-       "      <td>15.853746</td>\n",
-       "      <td>0.437556</td>\n",
-       "      <td>8.908049</td>\n",
-       "      <td>0.237160</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>kernel_ridge_regression</td>\n",
-       "      <td>laplacian</td>\n",
-       "      <td>pca</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>N/A</td>\n",
-       "      <td>N/A</td>\n",
-       "      <td>12.547653</td>\n",
-       "      <td>7.105361</td>\n",
-       "      <td>13.166647</td>\n",
-       "      <td>0.700920</td>\n",
-       "      <td>7.695260</td>\n",
-       "      <td>0.278754</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>kernel_ridge_regression</td>\n",
-       "      <td>polynomial</td>\n",
-       "      <td>pca</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>0.10</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>15.058477</td>\n",
-       "      <td>10.217698</td>\n",
-       "      <td>16.349417</td>\n",
-       "      <td>0.735500</td>\n",
-       "      <td>11.183879</td>\n",
-       "      <td>0.273440</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                     model      kernel representation best_gamma  best_lambda  \\\n",
-       "0  kernel_ridge_regression      linear         scaled        N/A         1.00   \n",
-       "1  kernel_ridge_regression         rbf         scaled        0.1         0.01   \n",
-       "2  kernel_ridge_regression   laplacian         scaled        0.1         0.01   \n",
-       "3  kernel_ridge_regression  polynomial         scaled       0.01         0.10   \n",
-       "4  kernel_ridge_regression      linear            pca        N/A         1.00   \n",
-       "5  kernel_ridge_regression         rbf            pca        0.1         0.01   \n",
-       "6  kernel_ridge_regression   laplacian            pca        0.1         0.01   \n",
-       "7  kernel_ridge_regression  polynomial            pca       0.01         0.10   \n",
-       "\n",
-       "  best_degree best_coef0  test_rmse   test_mae  cv_rmse_mean_at_best  \\\n",
-       "0         N/A        N/A  39.215463  35.824732             38.919971   \n",
-       "1         N/A        N/A  13.770211   7.619745             15.517286   \n",
-       "2         N/A        N/A  13.053007   7.055842             13.566520   \n",
-       "3           3        1.0  14.530295   9.536881             14.959008   \n",
-       "4         N/A        N/A  41.134212  35.938778             40.505645   \n",
-       "5         N/A        N/A  14.298824   7.981944             15.853746   \n",
-       "6         N/A        N/A  12.547653   7.105361             13.166647   \n",
-       "7           3        1.0  15.058477  10.217698             16.349417   \n",
-       "\n",
-       "   cv_rmse_std_at_best  cv_mae_mean_at_best  cv_mae_std_at_best  \n",
-       "0             0.554179            35.105316            0.441751  \n",
-       "1             0.628177             8.518545            0.318685  \n",
-       "2             0.827744             7.587519            0.346913  \n",
-       "3             0.585510            10.055216            0.293854  \n",
-       "4             0.485101            34.943503            0.165469  \n",
-       "5             0.437556             8.908049            0.237160  \n",
-       "6             0.700920             7.695260            0.278754  \n",
-       "7             0.735500            11.183879            0.273440  "
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from src.evaluation.splits import kfold_indices\n",
     "from src.evaluation.metrics import mae, rmse\n",
@@ -499,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +431,8 @@
     "    g.set_axis_labels(\"\", \"Mean Absolute Error\")\n",
     "    g.set_titles(\"{col_name} Representation\")\n",
     "    plt.subplots_adjust(top=0.85)\n",
-    "    g.fig.suptitle('KRR: Cross-Validation vs. Final Test Performance')\n",
+    "    g.fig.suptitle('KRR: Cross-Validation vs. Final Test Performance',\n",
+    "                   fontsize=16, fontweight='bold')\n",
     "    \n",
     "    plt.savefig(FIG_DIR / \"krr_cv_vs_test_comparison.png\", dpi=200)\n",
     "    plt.show()\n",
@@ -647,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +480,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "kernel-regression",
+   "display_name": "delft",
    "language": "python",
    "name": "python3"
   },
